; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_ref_array_sort.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_ref_array_sort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_sorting = type { i32 }
%struct.ref_array = type { i32, i32 }

@compare_refs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ref_array_sort(%struct.ref_sorting* %0, %struct.ref_array* %1) #0 {
  %3 = alloca %struct.ref_sorting*, align 8
  %4 = alloca %struct.ref_array*, align 8
  store %struct.ref_sorting* %0, %struct.ref_sorting** %3, align 8
  store %struct.ref_array* %1, %struct.ref_array** %4, align 8
  %5 = load %struct.ref_array*, %struct.ref_array** %4, align 8
  %6 = getelementptr inbounds %struct.ref_array, %struct.ref_array* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ref_array*, %struct.ref_array** %4, align 8
  %9 = getelementptr inbounds %struct.ref_array, %struct.ref_array* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @compare_refs, align 4
  %12 = load %struct.ref_sorting*, %struct.ref_sorting** %3, align 8
  %13 = call i32 @QSORT_S(i32 %7, i32 %10, i32 %11, %struct.ref_sorting* %12)
  ret void
}

declare dso_local i32 @QSORT_S(i32, i32, i32, %struct.ref_sorting*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
